force-app/main/default/objects/Analytics_Snapshot_For_Campaigns__c/Analytics_Snapshot_For_Campaigns__c.object-meta.xml
<CustomObject>
    <description>Stores Analytical Snapshots for Campaigns</description>
    <label>Snapshot For Campaign</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Analytics Snapshot For Campaigns Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot For Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>