force-app/main/default/objects/Analytics_Snapshot_For_Campaigns__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>Stores the value of the Campaign Name in the Snap Shot Analytics</description>
    <label>Campaign Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>