force-app/main/default/objects/Analytics_Snapshot_For_Campaigns__c/fields/Campaign_Segment__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Segment__c</fullName>
    <label>Campaign Segment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>