force-app/main/default/objects/Analytics_Snapshot_For_Campaigns__c/fields/Letter_Type__c.field-meta.xml
<CustomField>
    <fullName>Letter_Type__c</fullName>
    <label>Letter Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>