force-app/main/default/objects/Analytics_Snapshot_For_Campaigns__c/fields/Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Status__c</fullName>
    <label>Member Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>