force-app/main/default/objects/Analytics_Snapshot_For_Campaigns__c/fields/Snap_Shot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snap_Shot_Date__c</fullName>
    <label>Snap Shot Date</label>
    <type>Date</type>
</CustomField>